@@ -1,6 +1,7 @@
 2008-09-13  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9277: Incorrect size of htmlArea RTE dialogue windows in Google Chrome browser
+	* Fixed bug #9338: htmlArea RTE: incorrect opening size of some dialogue windows
 
 2008-09-08  Stanislas Rolland  <typo3@sjbr.ca>
 
